tests/fixtures/valid/set/set_str.py
# Set of strings
strs: set[str] = {"hello", "world", "test"}

print(len(strs))
print("hello" in strs)
print("foo" in strs)
