tests/fixtures/invalid/round_dict_str.py
# Cannot call round() with Dict[str, int], Str
x = round({"a": 1}, "hello")
